clusters/home/apps/weaveworks-dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-gitops-ingress
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Weave K8s Flux Dashboard
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: https://avatars.githubusercontent.com/u/9976052?s=200&v=4
    gethomepage.dev/name: Weaveworks Dashboard
    gethomepage.dev/pod-selector: app.kubernetes.io/instance=ww-gitops
    gethomepage.dev/weight: "2"
    glance/name: "Weave GitOps"
    glance/icon: "di:weave-gitops"
spec:
  rules:
    - host: weave.pacholoamit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ww-gitops-weave-gitops
                port:
                  number: 9001
